test/Fail/FaceConstraintUnsatisfiable.err
FaceConstraintUnsatisfiable.agda:7.6-13: error: [FaceConstraintUnsatisfiable]
The face constraint is unsatisfiable
when checking that the pattern (i0 = i1) has type IsOne i0
